2008-07-21:  Generalized Mat.transpose to support specifying sub-matrices.

2008-04-23:  Fixed a parameter checking bug for syevr-related functions.

2008-04-11:  Added new BLAS function:

               * trmv

             Thanks to Martin Willensdorfer <ma.wi@gmx.at> for the patch!

2008-02-13:  Fixed a bug when implicitly allocating result matrices
             with user-specified offsets.  It may cause segfaults and
             affects many functions (though it is presumably very rarely
             triggered).

             Thanks to Shun Sakuraba <shun.sakuraba@gmail.com> for
             contributing this patch!

2008-01-11:  Fixed installation of new release.  Added new function:

               * Mat.detri

2008-01-02:  New major release due to restructuring.  The library is now
             packed into a separate namespace (Lacaml), and the previously
             visible Lacaml-module is now called "Impl".

2007-12-27:  Added new BLAS function:

               * symv

2007-11-22:  Added Mat.scal and Mat.axpy.

2007-11-21:  Fixed a bug in vector iteration functions related to
             negative index increments.  Thanks to Fabrice Pardo
             <Fabrice.Pardo@lpn.cnrs.fr> for reporting!

             Greatly improved performance of matrix copying.  Cleaned up
             some code.  Removed dependency on F2C library (gfortran
             should nowadays be linked implicitly).

2007-03-30:  Added lacaml_utils to installed interfaces.

2007-03-28:  Fixed potential GC-bugs.  Updated OCamlMakefile.

2006-11-22:  Updated OCamlMakefile.

2006-09-15:  Fixed bug on 64bit architectures: Fortran integers are
             32bit only, Lacaml did not account for that.

2006-07-24:  Tightened parameter checks on functions that accept square
             matrices only to prevent LAPACK from complaining (i.e. raise
             OCaml exceptions instead).

2006-07-06:  Added Vec.concat.

2006-06-08:  Fixed some GC-bugs.  Cleaned up C-code.
